<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewList"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@mipmap/add_btn" />

        <TextView
            android:paddingLeft="3dp"
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/alfa_slab_one"
            android:paddingBottom="5dp"
            android:text="@string/post_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="start"
            android:padding="5dp"
            android:paddingBottom="10dp"
            android:text="@string/post_descriptionn"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/timestampList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/date_created"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />


    </LinearLayout>


</androidx.cardview.widget.CardView>
